update to fabric 1.21.3